tests/compile_failures/splitbits_bad_template_width.rs
use splitbits::splitbits;

fn main() {
    let input = 5;
    splitbits!(input, "aaaabbb");
}
