tests/compile_failures/splitbits_bad_template_width.stderr
error: proc macro panicked
 --> tests/compile_failures/splitbits_bad_template_width.rs:5:5
  |
5 |     splitbits!(input, "aaaabbb");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Template must have a valid width: "Template width must be 8, 16, 32, 64, or 128, but was 7."
